--- a/public/styles.css
+++ b/public/styles.css
@@ -53,7 +53,32 @@ div.leaflet-popup-content>p {
 }
 
 .empty {
-    height: 50px;
+    height: 10px;
     min-width: 170px;
     content: '\200b';
+}
+
+@media only screen and (max-width: 992px) {
+    .logo_input_wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+    .logo_container {
+        margin-bottom: 15px;
+    }
+    #link_input {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .form-row>.col-md-1 {
+        text-align: center;
+    }
+    #button {
+        margin-top: 10px;
+    }
 }
